create homepage and related components

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,1 +1,121 @@
 /* You can add global styles to this file, and also import other style files */
+
+@font-face {
+    font-family: Rubik;
+    src: url(./assets/fonts/Rubik/Rubik-VariableFont_wght.ttf);
+}
+
+@font-face {
+    font-family: RobotoMono;
+    src: url(./assets/fonts/Roboto_Mono/RobotoMono-VariableFont_wght.ttf);
+}
+
+:root {
+    --theme-red-color: #BF1E2E;
+    --main-bg-color:#F8F9F9;
+    --app-grey: #525960;
+    --light-grey: #8d9196;
+    --lighter-grey: #D6D9DC;
+    --darker-grey: #474D53;
+    --darkest-grey: #232629;
+    --app-blue: #0A95FF;
+    --light-blue: #E1ECF4;
+    --dark-blue: #6A86C2;
+    --very-light-red: #FEE3CE;
+
+    --gold: #FFCC01;
+    --silver: #B4B8BC;
+    --bronze: #D1A684;
+}
+
+* {
+    font-family: Rubik;
+    box-sizing: border-box;
+}
+
+body {
+    margin: 0;
+}
+
+app-root {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 100svh;
+    width: 100%;
+    align-items: center;
+    background-color: var(--main-bg-color);
+}
+
+app-root>:nth-child(3) {
+    flex: 1;
+}
+
+app-header, app-footer, app-not-found {
+    width: 100%;
+}
+
+app-not-found {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    /* background: url(assets/images/broken-bender.jpg) no-repeat right/contain; */
+}
+
+app-header {
+    display: flex;
+    align-items: center;
+    border-top: 3px solid var(--theme-red-color);
+    border-bottom: 1px solid var(--lighter-grey);
+    background-color: white;
+    padding: 0.5rem;
+    justify-content: center;
+    gap: 1rem;
+    flex-wrap: wrap;
+    position: sticky;
+    top: 0;
+}
+
+app-footer {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    justify-content: space-around;
+    background-color: var(--darkest-grey);
+    color: white;
+    padding: 1rem;
+    margin-top: 5svh;
+}
+
+.logo {
+    font-size: 1rem;
+    color: var(--light-grey);
+    font-family: RobotoMono;
+    width: max-content;
+    cursor: pointer;
+}
+
+.logo>span {
+    font-size: 1.5rem;
+    color: var(--theme-red-color);
+    font-weight: bold;
+}
+
+.hover-underline:hover, app-footer a:hover {
+    text-decoration: underline!important;
+    text-decoration-color: var(--app-blue)!important;
+    text-decoration-thickness: 3px!important;
+    text-underline-position: under!important;
+}
+
+app-homepage {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1rem;
+}
+
+button {
+    border: none;
+}
