--- a/frontend/src/app/components/header/header.component.css
+++ b/frontend/src/app/components/header/header.component.css
@@ -120,7 +120,7 @@
     display: flex;
 }
 
-.nav-item {
+/* .nav-item {
     cursor: pointer;
     display: block;
     padding: 0.5rem 1rem;
@@ -137,7 +137,7 @@
 
 #home-nav {
     margin-bottom: 1rem;
-}
+} */
 
 
 @media (max-width: 666px) {
@@ -149,6 +149,10 @@
     } */
 
     #search-icon {
+        display: block;
+    }
+
+    #menu-icon {
         display: block;
     }
 }
