display top questions and ask form

--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -2,7 +2,7 @@
     <h1>
         Top Questions
     </h1>
-    <a [routerLink]="['/ask']" class="ask-btn">Ask Question</a>
+    <a [routerLink]="['/questions/ask']" class="ask-btn">Ask Question</a>
 </header>
 
 <nav class="nav-filters">
