--- a/frontend/src/app/components/ask/ask.component.html
+++ b/frontend/src/app/components/ask/ask.component.html
@@ -1,7 +1,7 @@
 <h1>Ask a Question</h1>
 
 <form [formGroup]="askForm" (ngSubmit)="onSubmit()" id="ask-form">
-    <div id="inputs">
+    <div class="inputs">
         <div class="input">
             <div class="input-wrapper" [class.valid]="summary.valid" [class.invalid]="summary.invalid && (summary.dirty || summary.touched)">
                 <input type="text" placeholder="Question Summary" formControlName="summary">
@@ -30,5 +30,5 @@
         <div id="tags-label">Tags</div>
         <div *ngFor="let tag of tags.value; index as i" class="tag"><div class="tag-name">{{tag}}</div> <ion-icon name="remove-outline" size="large" (click)="removeTag(i)"></ion-icon></div>
     </div>
-    <input type="submit" value="Ask Question" [class.valid]="askForm.valid" [disabled]="askForm.invalid">
+    <input type="submit" value="Post Your Question" [class.valid]="askForm.valid" [disabled]="askForm.invalid">
 </form>
