display all questions and edit and delete actions

--- a/frontend/src/app/components/question/question.component.css
+++ b/frontend/src/app/components/question/question.component.css
@@ -50,3 +50,17 @@
     color: var(--app-text-blue);
     border-radius: 5px;
 }
+
+.delete-btn {
+    color: salmon;
+    cursor: pointer;
+}
+
+.edit-btn {
+    color: var(--app-blue);
+    cursor: pointer;
+}
+
+.actions {
+    font-size: 1rem;
+}
