--- a/frontend/src/app/components/question/question.component.html
+++ b/frontend/src/app/components/question/question.component.html
@@ -7,5 +7,13 @@
 <div class="q-info">
     <div class="q-summary" [routerLink]="['/questions', 'q', question.id]">{{question.summary}}</div>
     <div class="q-tags"><span class="q-tag">tag</span> <span class="q-tag">tag</span> <span class="q-tag">tag</span></div>
-    <div class="q-ask-info"><span class="q-asker">{{question.askedBy}} </span> <span class="q-asker-meta">420</span> asked {{question.askedDate}}</div>
+    <div class="q-ask-info">
+        <span class="q-asker">{{question.askedBy}} </span>
+        <span class="q-asker-meta">420</span>
+        <span>asked {{question.askedDate}}</span>
+        <span class="actions">
+            <span *ngIf="question.askedBy === user.id" class="edit-btn"> edit </span>
+            <span *ngIf="user.role === 'admin'" class="delete-btn"> delete </span>
+        </span>
+    </div>
 </div>
