render components depending on signed in out behaviour

--- a/frontend/src/app/components/all-questions/all-questions.component.html
+++ b/frontend/src/app/components/all-questions/all-questions.component.html
@@ -1,6 +1,6 @@
 <header>
     <h1>
-        Top Questions
+        All Questions
     </h1>
     <a [routerLink]="['/questions', 'ask']" class="ask-btn">Ask Question</a>
 </header>
