--- a/frontend/src/app/components/signin/signin.component.html
+++ b/frontend/src/app/components/signin/signin.component.html
@@ -16,4 +16,5 @@
         </div>
     </div>
     <input type="submit" [class.valid]="signinForm.valid" value="sign in" [disabled]="signinForm.invalid">
+    <button (click)="signAdmin()">admin</button>
 </form>
