[fix] tests failing with standalone components

--- a/frontend/src/app/components/all-questions/all-questions.component.html
+++ b/frontend/src/app/components/all-questions/all-questions.component.html
@@ -9,7 +9,7 @@
     <div class="inputs">
         <div class="input">
             <div class="input-wrapper" [class.valid]="query.valid" [class.invalid]="query.invalid && (query.dirty || query.touched)">
-                <input type="search" placeholder="search questions" formControlName="id">
+                <input type="search" placeholder="search questions" formControlName="query">
                 <label for="">search query</label>
             </div>
         </div>
