--- a/frontend/src/app/components/users/users.component.html
+++ b/frontend/src/app/components/users/users.component.html
@@ -8,7 +8,7 @@
     <div class="inputs">
         <div class="input">
             <div class="input-wrapper" [class.valid]="query.valid" [class.invalid]="query.invalid && (query.dirty || query.touched)">
-                <input type="search" placeholder="search users" formControlName="id">
+                <input type="search" placeholder="search users" formControlName="query">
                 <label for="">search query</label>
             </div>
         </div>
