--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,6 @@
+<div id="messages" *ngIf="messages">
+    <app-toast-message class="{{toastMessage.type}}" *ngFor="let toastMessage of messages; index as i" [toastMessage]="toastMessage" (close)="closeMessage(i)"></app-toast-message>
+</div>
 <app-header></app-header>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
