working auth and guards

--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -11,7 +11,7 @@
 </form>
 
 <div id="auth-header">
-    <ng-container *ngIf="authSvc.authUser else noUser">
+    <ng-container *ngIf="authUser else noUser">
         <div id="avatar-card">
             <ion-icon id="avatar" name="person-circle-outline" size="large"></ion-icon>
             <div class="gold-badges badge">·<span>7</span></div>
