--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -62,6 +62,10 @@ app-header, app-footer, app-not-found {
     width: 100%;
 }
 
+app-loading {
+    flex: 1;
+}
+
 app-not-found {
     display: flex;
     flex-direction: column;
@@ -155,7 +159,6 @@ button {
 .nav-filter.active, .nav-filter:hover {
     background-color: var(--lighter-grey);
 }
-
 
 
 app-signup, app-signin, app-ask {
@@ -323,3 +326,52 @@ app-toast-message {
 .info {
     background-color: gray;
 }
+
+
+.lds-ripple {
+    display: inline-block;
+    position: relative;
+    width: 80px;
+    height: 80px;
+  }
+  .lds-ripple div {
+    position: absolute;
+    border: 4px solid var(--theme-red-color);
+    opacity: 1;
+    border-radius: 50%;
+    animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+  }
+  .lds-ripple div:nth-child(2) {
+    animation-delay: -0.5s;
+  }
+  @keyframes lds-ripple {
+    0% {
+      top: 36px;
+      left: 36px;
+      width: 0;
+      height: 0;
+      opacity: 0;
+    }
+    4.9% {
+      top: 36px;
+      left: 36px;
+      width: 0;
+      height: 0;
+      opacity: 0;
+    }
+    5% {
+      top: 36px;
+      left: 36px;
+      width: 0;
+      height: 0;
+      opacity: 1;
+    }
+    100% {
+      top: 0px;
+      left: 0px;
+      width: 72px;
+      height: 72px;
+      opacity: 0;
+    }
+  }
+  
