connect question endpoints and related features

--- a/frontend/src/app/components/ask/ask.component.html
+++ b/frontend/src/app/components/ask/ask.component.html
@@ -1,6 +1,6 @@
 <h1>Ask a Question</h1>
 
-<form [formGroup]="askForm" (ngSubmit)="onSubmit()" id="ask-form">
+<form [formGroup]="askForm" (ngSubmit)="onSubmit()" id="ask-form" *ngIf="!loading || error; else Tloading">
     <div class="inputs">
         <div class="input">
             <div class="input-wrapper" [class.valid]="summary.valid" [class.invalid]="summary.invalid && (summary.dirty || summary.touched)">
@@ -32,3 +32,7 @@
     </div>
     <input type="submit" value="Post Your Question" [class.valid]="askForm.valid" [disabled]="askForm.invalid">
 </form>
+
+<ng-template #Tloading>
+    <div class="lds-ripple"><div></div><div></div></div>
+</ng-template>
