--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -54,7 +54,7 @@ app-root {
     background-color: var(--main-bg-color);
 }
 
-app-root>:nth-child(3) {
+app-root>:nth-child(4) {
     flex: 1;
 }
 
@@ -86,6 +86,7 @@ app-header {
     flex-wrap: wrap;
     position: sticky;
     top: 0;
+    z-index: 999;
 }
 
 app-footer {
@@ -105,6 +106,12 @@ app-footer {
     font-family: RobotoMono;
     width: max-content;
     cursor: pointer;
+    padding: 0.5rem;
+    border-radius: 5px;
+}
+
+.logo:hover {
+    background-color: var(--main-bg-color);
 }
 
 .logo>span {
@@ -333,18 +340,18 @@ app-toast-message {
     position: relative;
     width: 80px;
     height: 80px;
-  }
-  .lds-ripple div {
+}
+.lds-ripple div {
     position: absolute;
     border: 4px solid var(--theme-red-color);
     opacity: 1;
     border-radius: 50%;
     animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
-  }
-  .lds-ripple div:nth-child(2) {
+}
+.lds-ripple div:nth-child(2) {
     animation-delay: -0.5s;
-  }
-  @keyframes lds-ripple {
+}
+@keyframes lds-ripple {
     0% {
       top: 36px;
       left: 36px;
@@ -373,5 +380,16 @@ app-toast-message {
       height: 72px;
       opacity: 0;
     }
-  }
+}
   
+.caret-icon {
+    cursor: pointer;
+}
+
+.caret-up-icon:hover {
+    color: var(--light-green);
+}
+
+.caret-down-icon:hover {
+    color: var(--light-red);
+}
