[Fix] routing and guarding

--- a/frontend/src/app/components/navigation/navigation.component.html
+++ b/frontend/src/app/components/navigation/navigation.component.html
@@ -1,5 +1,5 @@
 
-<div class="nav-item" routerLink="" id="home-nav" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" [class.active]="isLinkActive('')">Home</div>
+<div class="nav-item" routerLink="home" id="home-nav" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" [class.active]="isLinkActive('')">Home</div>
 <div class="nav-item" routerLink="/questions" routerLinkActive="active">Questions</div>
 <div class="nav-item" routerLink="/tags" routerLinkActive="active">Tags</div>
 <div class="nav-item" routerLink="/users" routerLinkActive="active">Users</div>
