--- a/frontend/src/app/components/signin/signin.component.html
+++ b/frontend/src/app/components/signin/signin.component.html
@@ -20,5 +20,5 @@
 </form>
 
 <ng-template #Tloading>
-    <app-loading></app-loading>
+    <div class="lds-ripple"><div></div><div></div></div>
 </ng-template>
