--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -132,6 +132,7 @@ app-homepage {
     flex-direction: column;
     align-items: center;
     padding: 1rem;
+    width: 100%;
 }
 
 button {
@@ -260,7 +261,7 @@ input[type=submit].valid {
 }
 
 .errors {
-    color: red;
+    color: var(--light-red);
 }
 
 textarea {
